# split-gtk

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  README.md  autogen.sh  configure.ac  meson.build
po/: POTFILES.in  meson.build  split-gtk.pot  zh_CN.po
src/: Makefile.am  main.cpp  meson.build
